@@ -5,6 +5,7 @@
 #include "libcxxw_config.h"
 #include "listitemhandle_impl.H"
 #include "x/w/uielements.H"
+#include "x/w/callback_trigger.H"
 #include "messages.H"
 
 LIBCXXW_NAMESPACE_START
@@ -13,6 +14,15 @@ listitemhandleObj::listitemhandleObj()=default;
 
 listitemhandleObj::~listitemhandleObj()=default;
 
+void listitemhandleObj::selected(ONLY IN_THREAD, bool selected_flag)
+{
+	selected(IN_THREAD, selected_flag, {});
+}
+
+void listitemhandleObj::autoselect(ONLY IN_THREAD)
+{
+	autoselect(IN_THREAD, {});
+}
 
 listitemhandle uielements::get_listitemhandle(const std::string_view &name)
 	const
